# serializer version: 1
# name: test_only_variable_output
  '''
  
  [31m[E02] Error:[0m Variable [38;5;201mx[0m not defined in this scope
     [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mstdin:1:1[38;5;246m][0m
     [38;5;246m│[0m
   [38;5;246m1 │[0m [38;5;201mx[0m
   [38;5;240m  │[0m [38;5;201m┬[0m  
   [38;5;240m  │[0m [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m Not defined
  [38;5;246m───╯[0m
  
  
  '''
# ---
# name: test_variable_in_expr_output
  '''
  
  [31m[E02] Error:[0m Variable [38;5;201mvar[0m not defined in this scope
     [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mstdin:1:1[38;5;246m][0m
     [38;5;246m│[0m
   [38;5;246m1 │[0m [38;5;201mv[0m[38;5;201ma[0m[38;5;201mr[0m[38;5;249m+[0m[38;5;249m1[0m
   [38;5;240m  │[0m [38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m  
   [38;5;240m  │[0m  [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m Not defined
  [38;5;246m───╯[0m
  
  
  '''
# ---
